Fixed breadcrumbs overlapping content on mobile

--- a/docs/_static/styles/components/_article.scss
+++ b/docs/_static/styles/components/_article.scss
@@ -1,4 +1,4 @@
-article.bd-article {
+main#main-content article.bd-article {
     padding-left: 0 !important;
 
     h1, h2, h3, h4, h5, h6 {
